# pretix-payfip

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_payfip/: apps.py
pretix_payfip/locale/de_Informal/LC_MESSAGES/: django.po
